# rf-noise-gen

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  rfnoise.spec
.github/workflows/: release.yml
examples/: sample_session.json
packaging/: entry.py
rfnoise/: __init__.py  __main__.py  bands.py  cli.py  engine.py  freq.py  gui.py  interactive.py  model.py  modulation.py  session.py  sources.py  status.py  tuning.py
rfnoise/devices/: __init__.py  base.py  hackrf.py  mock.py  rtlsdr.py  tinysa.py
tests/: test_bands.py  test_cli.py  test_device_modulation.py  test_devices.py  test_engine.py  test_engine_integration.py  test_freq.py  test_golden.py  test_gui.py  test_intra_band_sweep.py  test_modulation.py  test_seams.py  test_session.py  test_status.py  test_tuning.py
tests/golden/: schedule_v1.json
